# example-code-2e

./: .gitignore  pyproject.toml  tags
02-array-seq/: array-seq.py  bisect_demo.py  listcomp_speed.py  match_lat_lon.py  metro_lat_lon.py
03-dict-set/: index.py  index0.py  index_default.py  me_index.py  me_test.py
04-text-byte/: categories.py  default_encodings.py  locale_sort.py  normeq.py  numerics_demo.py  ola.py  ramanujan.py  simplify.py  skin.py  stdout_check.py  two_flags.py  zwj_sample.py
05-data-classes/: cards.py  cards_enum.py  match_cities.py
06-obj-ref/: bus.py  cheese.py  haunted_bus.py  twilight_bus.py
07-1class-func/: bingocall.py  tagger.py
08-def-type-hints/: arg_lab.py  charindex.py  colors.py  columnize.py  columnize_test.py  ctime.py  replacer.py  romans.py  romans_test.py  sample.py  typevar_bounded.py  typevars_constrained.py
09-closure-deco/: average_oo.py  fibo_demo.py  fibo_demo_cache.py  htmlizer.py  registration.py  registration_abridged.py  registration_param.py  stacked.py
10-dp-1class-func/: classic_strategy.py  classic_strategy_test.py  promotions.py  strategy.py  strategy_best2.py  strategy_best3.py  strategy_best4.py  strategy_param.py  strategy_param_test.py  strategy_test.py
11-pythonic-obj/: mem_test.py  patterns.py  vector2d_v0.py  vector2d_v1.py  vector2d_v2.py  vector2d_v2_fmt_snippet.py  vector2d_v3.py  vector2d_v3_prophash.py  vector2d_v3_slots.py
12-seq-hacking/: test_slice.py  vector_v1.py  vector_v2.py  vector_v3.py  vector_v4.py  vector_v5.py
13-protocol-abc/: bingo.py  frenchdeck2.py  lotto.py  tombola.py  (+3 more)
(+318 files in other folders)
